# azure-iot-sdk-c-pnp-SUSI-AllDevice

./: .gitattributes  .gitignore  CMakeLists.txt  device.c  device.h  impl.c  impl.h  main.c  readme.md  telemetries.h
SUSI_HWM-DPS/: CMakeLists.txt  SUSI_HWM.c  SUSI_HWM.h  main.c  pnp_device.c  pnp_device.h
SUSI_HWM-DPS/utilities/: device_detailed_information_interface.c  device_detailed_information_interface.h  deviceinfo_interface.c  deviceinfo_interface.h  digitaltwin_client_helper.c  digitaltwin_client_helper.h  digitaltwin_serializer.c  digitaltwin_serializer.h  sensors_information_interface.c  sensors_information_interface.h
SusiDevice/: SPD.h
SusiDevice/include/: Susi4.h  SusiDeviceAPI.h
SusiDevice/x64/: HWM3rdParty.lib
cs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  azure_iot_sdks.sln  cmake_install.cmake  parson.vcxproj  parson.vcxproj.filters
cs/UTX_3117-CS/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  UTX_3117-CS.vcxproj  UTX_3117-CS.vcxproj.filters  cmake_install.cmake
cs/c-utility/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  DartConfiguration.tcl  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  aziotsharedutil.vcxproj  aziotsharedutil.vcxproj.filters  azure_c_shared_utility.sln  cmake_install.cmake
cs/digitaltwin_client/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  digitaltwin_client.vcxproj  digitaltwin_client.vcxproj.filters
cs/iothub_client/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  iothub_client.vcxproj  iothub_client.vcxproj.filters  iothub_client_amqp_transport.vcxproj  iothub_client_amqp_transport.vcxproj.filters  iothub_client_amqp_ws_transport.vcxproj  iothub_client_amqp_ws_transport.vcxproj.filters  iothub_client_http_transport.vcxproj  iothub_client_http_transport.vcxproj.filters  iothub_client_mqtt_transport.vcxproj  iothub_client_mqtt_transport.vcxproj.filters  iothub_client_mqtt_ws_transport.vcxproj  iothub_client_mqtt_ws_transport.vcxproj.filters
cs/iothub_service_client/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  iothub_service_client.vcxproj  iothub_service_client.vcxproj.filters
cs/provisioning_client/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  hsm_security_client.vcxproj  hsm_security_client.vcxproj.filters  prov_amqp_transport.vcxproj  (+15 more)
cs/uamqp/: uamqp.sln  (+11 more)
utilities/: commands.c  commands.h  impl.c  impl.h  properties.c  properties.h  telemetries.c  telemetries.h
(+53 files in other folders)
